--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>The Fellowship of the Ring</title>
+  <script type="text/javascript" src="scripts/jquery-3.2.1.min.js"></script>
   <link rel="stylesheet" href="./stylesheets/style.css">
 </head>
 <body>
@@ -10,13 +11,13 @@
   </div>
   <audio id="hobbit-theme" src="./media/hobbit_theme.mp3"></audio>
   <script charset="utf-8">
-    var nazgulScreech = function () {
-      document.getElementById("nazgul-screech").play();
-    };
-    var playTheme = function () {
-      document.getElementById("hobbit-theme").play();
-    };
-    playTheme();
+    // var nazgulScreech = function () {
+    //   document.getElementById("nazgul-screech").play();
+    // };
+    // var playTheme = function () {
+    //   document.getElementById("hobbit-theme").play();
+    // };
+    // playTheme();
   </script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
   <script src="./scripts/fellowship.js"></script>
