--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>The Fellowship of the Ring</title>
   <link rel="stylesheet" href="./stylesheets/style.css">
+  <script src='./scripts/jquery.js'></script>
 </head>
 <body>
   <div class="overlay">
